[tool.black]
line-length = 79

[tool.poetry]
name = "kova"
version = "0.1.0"
description = "Message-based framework for buildling resilient mobile backends"
authors = ["Eric Gazoni <eric@adimian.com>"]
license = "Apache License, Version 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nats-py = "^2.2.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.6"}
asyncpg = "^0.27.0"
protobuf = "3.20.1"
minio = "^7.1.13"
alembic = "^1.10.2"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
cryptography = "^39.0.2"
arrow = "^1.2.3"
loguru = "^0.6.0"
nkeys = "^0.1.0"
nats-tools = "^1.0.2"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
httpx = "^0.24.0"
email-validator = "^2.0.0.post2"
python-ulid = "^1.1.0"
psycopg2-binary = "^2.9.6"
requests = "^2.31.0"
pillow = "^9.5.0"
aiohttp = "^3.8.5"
locust = "^2.16.1"
nats-python = "^0.8.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest-cov = "^4.0.0"
pdbpp = "^0.10.3"
pre-commit = "^3.1.1"
pytest-asyncio = "^0.20.3"
mkdocs = "^1.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = '-m "not integration"'
markers = [
  "integration: integration tests (deselect with '-m \"not integration\")",
]
